Community Edition Build 0.9.180:

* NEW: RAR5 Support (Default & SharpCompress)
* NEW: Added links to The Organizer guide to the online manual help system
* NEW: Added the Git version to the Splash Screen, to more easily find bug in specific releases.

* CHANGE: Updated the Splash Screen and Renamed the Program to Community Edition, this means that a new config folder will be used %appdata%\cYo\ComicRack Community Edition. 
* CHANGE: Removed everything to do with Validation/Donation/PayPal
* CHANGE: Removed everything to do Twitter
* CHANGE: Removed the Crash Report (used the cyolito.com address)
* CHANGE: Removed Android Validation of apk signature (so we can use the cracked version)
* CHANGE: Updated to .NET Framework v4.8
* CHANGE: Updated SharpZipLib to v1.4.2
* CHANGE: Updated SharpCompress to v0.36
* CHANGE: Switched MySQl library to MySQLConnector for better speed & compatbility with MariaDB.
* CHANGE: Updated WindowsCodePack to V1.15
* CHANGE: Updated home & forum links to Github,
* CHANGE: Updated wiki links to the Wayback Machine.
* CHANGE: Updated the default help system to the online manual (from Wayback Machine)
* CHANGE: Updated manual links & fix chapter 12 links
* CHANGE: Updated Help localize ComicRack links (we still need access to the Localizer program)
* CHANGE: Updated default sort to be natural sorting (numeric)
* CHANGE: File Format will be the actual file format of the archive and not simply based on the extension.
* CHANGE: The default docking mode is now Fill, instead of Bottom.
* CHANGE: Improved performances while handling Tar files (by Apiweb)
* CHANGE: Removed the Crash submission dialog that used the cyolito.com website.

* BUGFIX: Fixed smartlist "in range" for dates, the second field wasn't taken into account.
* BUGFIX: Fixed possible crash if window size is less than 0 (Usually when using high DPI scaling).